# lynx-snapshots

./: .Lynx.prcs_aux  00README  ABOUT-NLS  AUTHORS  CHANGES  CHANGES.chartrans  CHANGES.configure  CHANGES.new  COPYHEADER  COPYHEADER.asc  COPYING  COPYING.asc  CRAWL.announce  DESC  INSTALLATION  LYHelp.hin  LYMessages_en.h  Lynx.prj  MAKEFILE.W32  Makefile  Makefile.old  PROBLEMS  README  README.chartrans  README.configure  RELEASE_STATEMENT  aclocal.m4  bcblibs.bat  build-slang.com  build.bat  build.com  cfg_defs.sh  config.guess  config.hin  config.sub  configure  configure.in  descrip.mms  fixtext.sh  install.sh  (+14 more)
PACKAGE/: lynx-curses.iss  lynx-curssl.iss  lynx-default.iss  lynx-newssl.iss  lynx-oldssl.iss  lynx-slang.iss  lynx.iss  lynx.nsi  lynx.spec  version.iss
PACKAGE/debian/: changelog  control  copyright  doc-base  lynx-dev.lintian-overrides  menu  rules  watch
WWW/: FreeofCharge.html  README.txt
about_lynx/: about_lynx-dev.html  about_lynx.html
docs/: CHANGES  CHANGES.chartrans  CHANGES2.3  CHANGES2.4  CHANGES2.5  CHANGES2.6  CHANGES2.7  CHANGES2.8  CRAWL.announce  IBMPC-charsets.announce  INSTALLATION.old  Makefile.old  OS-390.announce  README.TRST  README.chartrans  README.defines  README.html  README.jp  README.metrics  README.rootcerts  README.ssl  README.sslcerts  README.txt  RFC-MAILCAP.txt  VMSWAIS.announce  djgpp.key  pdcurses.key  slang.key  win-386.announce
intl/: bindtextdom.c  cat-compat.c  dcgettext.c  dgettext.c  explodename.c  finddomain.c  gettext.c  intl-compat.c  l10nflist.c  loadmsgcat.c  localealias.c  makefile.in  textdomain.c
lib/: dirent.c  dirent.h
lynx_help/: Lynx_users_guide.html  about_lynx.html  help_files.txt  lynx-dev.html  lynx_help_main.html  lynx_url_support.html
lynx_help/keystroke_commands/: bookmark_help.html  follow_help.html  gopher_types_help.html  history_help.html  keystroke_help.html  option_help.html  other_help.html
lynx_help/keystrokes/: alt_edit_help.html  bashlike_edit_help.html  bookmark_help.html  cookie_help.html  dired_help.html  edit_help.html  environments.html  follow_help.html  gopher_types_help.html  history_help.html  keystroke_help.html  movement_help.html  option_help.html  other_help.html  print_help.html  scrolling_help.html  test_display.html  visited_help.html  xterm_help.html
po/: POTFILES.in  ca.po  cs.po  da.po  de.po  eo.po  es.po  et.po  fi.po  fr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  lynx.pot  makefile.in.in  makefile.inn  nl.po  no.po  pl.po  pt.po  pt_BR.po  readme  ro.po  ru.po  rw.po  sl.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
samples/: blue-background.lss  bright-blue.lss  cernrules.txt  home.htm  jumps.htm  jumpsUnix.html  jumpsVMS.html  keepviewer  lynx-demo.cfg  lynx-keymaps  lynx.bat  lynx.cfg  lynx.lss  lynx_bookmarks.htm  lynxdump  mailcap  mailto-form.pl  mhtml-tool  mild-colors.lss  oldlynx  oldlynx.bat  opaque.lss
scripts/: bycodes.pl  cfg2html.pl  cfg_defs.sh  cfg_edit.sh  cfg_path.sh  collapse-br  conf.mingw.sh  fixtext.sh  indent.sh  install-cfg.sh  install-lss.sh  man2hlp.sh  relpath.sh  tbl2html.pl
src/: AttrList.h  DefaultStyle.c  GridText.c  GridText.h  HTAlert.c  HTAlert.h  HTFWriter.c  HTFont.h  HTForms.h  HTInit.c  HTML.c  HTML.h  HTNestedList.h  HTSaveToFile.h  LYBookmark.c  LYBookmark.h  LYCgi.c  LYCgi.h  LYCharSets.c  LYCharSets.h  LYCharUtils.c  LYCharUtils.h  LYCharVals.h  LYClean.c  LYClean.h  LYCookie.c  LYCookie.h  LYCurses.c  LYCurses.h  LYDownload.c  LYDownload.h  LYEdit.c  LYEdit.h  LYEditmap.c  LYExtern.c  LYExtern.h  LYForms.c  LYGCurses.h  LYGetFile.c  LYGetFile.h  (+76 more)
src/chrtrans/: MAKEW32.BAT  Makefile  Makefile.old  README.format  README.tables  UCkd.h  build-chrtrans.com  caselower.h  cp1250_uni.tbl  cp1251_uni.tbl  cp1252_uni.tbl  cp1253_uni.tbl  cp1255_uni.tbl  cp1256_uni.tbl  cp1257_uni.tbl  cp437_uni.tbl  cp737_uni.tbl  cp775_uni.tbl  cp850_uni.tbl  cp852_uni.tbl  cp857_uni.tbl  cp862_uni.tbl  cp864_uni.tbl  cp866_uni.tbl  cp866u_uni.tbl  cp869_uni.tbl  def7_uni.tbl  dmcs_uni.tbl  entities.h  iso01_uni.tbl  iso01_uni.tbl.orig  iso02_uni.tbl  iso03_uni.tbl  iso04_uni.tbl  iso05_uni.tbl  iso06_uni.tbl  iso07_uni.tbl  iso08_uni.tbl  iso09_uni.tbl  iso10_uni.tbl  (+26 more)
styles/: lynx.lss
test/: ALT88592.html  ISO_LATIN1_test.html  TestComment.html  bad-html.html  c1.html  circle.html  cp-1252.html  cp-1252a.html  idna-tr46.html  iso-8859-1.html  iso-8859-1a.html  iso-8859-2.html  iso-8859-2a.html  iso8859-1.html  iso88592.html  koi8-r.html  named-entities.html  quickbrown.html  raw8bit.html  sgml.html  spaces.html  special_urls.html  square.html  tabtest.html  tags.html  test-styles.html  triangle.html  unicode.html  utf-8-demo.html
utils/inews/: Makefile  Manifest  README  README.NN  clientlib.c  clientlib.h  conf.h  config.h-dist  inews.c  nntp.h  version.c
utils/lpansi/: lpansi.c  lpansi.txt
